optimize the login authenticate flow and change the express log system to log4js

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+{{ msg }}
 <form action="/login" method="post">
 用户名:<input type="text" name="username"><br/>
 密码:<input type="password" name="password"><br/>
