finish login page, full layout

--- a/public/src/sass/_extend.sass
+++ b/public/src/sass/_extend.sass
@@ -7,3 +7,7 @@
 .menu-list-active
   color: $theme-color
   background-color: $nav-active-bg
+.submenu-list-active
+  color: $theme-color
+  background-color: $nav-active-item-bg
+  @extend .no-text-deco
