--- a/public/src/sass/_variables.sass
+++ b/public/src/sass/_variables.sass
@@ -1,6 +1,7 @@
 $theme-color: #65cea7
 
-$nav-bg-color: #424f63
+$theme-bg-color: #424f63
 $nav-active-bg: #353f4f
 $nav-active-item-bg: #2A323F
 $nav-sub-item-height: 20px
+$nav-collapsed-w: 52px
