--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -1,3 +1,10 @@
+body
+  background: $theme-bg-color
+  font-family: 'sans-serif'
+  overflow: hidden
+  perspective: 1000
+  &.login_hide
+    overflow: auto
 a
   @extend .no-text-deco
   &:hover
