make the login more completely

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,21 +9,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?rev=4082409a1034870d93b38467b1b7de56">
+    <link rel="stylesheet" href="/css/style.css?rev=fe41bb5394d5df02f6bb04bf247af92e">
 </head>
 
 <body>
-    <section id="app"></section>
-    <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
-    <script>
-    window.jQuery || document.write('<script src="lib/vendor/jquery-1.11.3.min.js"><\/script>')
-    </script>
-    <script src="js/app.min.js?rev=7ea8ca53a36325dca3a98318e4625f2c"></script>
-    
-    <script src="js/main.min.js?rev=66dc6676e9d4e1a1698b53efc40bb896"></script>             
+<section id="app"></section>
+<script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
+<script>
+    window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
+</script>
+<script src="/js/app.min.js?rev=a4cf9662eadb8fe0d6cc2a51aaea2b52"></script>
+
+<script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
