--- a/public/src/sass/style.sass
+++ b/public/src/sass/style.sass
@@ -8,6 +8,12 @@
 html,body,body>section
   @extend .h100
 
+// #app-container
+//   transition: transform .8s
+//   opacity: 0
+// .login-hide
+//   #app-container
+//     opacity: 1
 .main-content
   @extend .h100
   margin-left: 240px
