--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2925,12 +2925,11 @@ a:hover {
   z-index: 10000;
   background: #424f63 url("http://adminex.themebucket.net/images/login-bg.jpg") no-repeat fixed;
   background-size: cover;
-  transition: all .8s ease-out; }
+  transition: all 1s; }
 
 .login-hide .login-container {
-  opacity: 0;
-  -webkit-transform: translate3d(140%, 50px, -600px);
-          transform: translate3d(140%, 50px, -600px); }
+  -webkit-transform: translate3d(0, -100%, 0);
+          transform: translate3d(0, -100%, 0); }
 
 .login-body {
   width: 100%;
@@ -2980,9 +2979,18 @@ a:hover {
   font-size: 16px;
   height: auto;
   padding: 10px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  transition: -webkit-transform .4s;
+  transition: transform .4s; }
   .form-signin .form-control:focus {
     z-index: 2; }
+  .form-signin .form-control.tip {
+    -webkit-transform: translate3d(0, -5px, 0);
+            transform: translate3d(0, -5px, 0); }
+
+.form-signin .error-msg {
+  font-size: 11px;
+  color: #97A29D; }
 
 .form-signin input[type="text"], .form-signin input[type="password"] {
   margin-bottom: 15px;
