--- a/public/src/sass/login.scss
+++ b/public/src/sass/login.scss
@@ -6,12 +6,16 @@
   height: 100%;
   z-index: 10000;
   background: $theme-bg-color url("http://adminex.themebucket.net/images/login-bg.jpg") no-repeat fixed;
+  // background: #38B18C;
+  // background: $theme-bg-color;
   background-size: cover;
-  transition: all .8s ease-out;
+  transition: all 1s;
+  // transform: rotateY(180deg);
+  // backface-visibility: hidden;
 }
 .login-hide .login-container{
-  opacity: 0;
-  transform: translate3d(140%,50px,-600px);
+  // transform: translate3d(140%,50px,-600px);
+  transform: translate3d(0,-100%,0);
 }
 .login-body {
   width: 100%;
@@ -69,13 +73,20 @@
     font-size: 16px;
     height: auto;
     padding: 10px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
+    transition: transform .4s;
 
     &:focus {
       z-index: 2;
     }
+
+    &.tip {
+      transform: translate3d(0, -5px, 0);
+    }
+  }
+  .error-msg {
+    font-size: 11px;
+    color: #97A29D;
   }
   input[type="text"], input[type="password"] {
     margin-bottom: 15px;
