--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,19 +12,20 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css?rev=fe41bb5394d5df02f6bb04bf247af92e">
+    <link rel="stylesheet" href="/css/style.css?rev=@@hash">
+    <script type="text/javascript">xfxb = {login: false};</script>
 </head>
 
 <body>
-<section id="app"></section>
-<script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
-<script>
+    <section id="app"></section>
+    <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
+    <script>
     window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
-</script>
-<script src="/js/app.min.js?rev=a4cf9662eadb8fe0d6cc2a51aaea2b52"></script>
-
-<script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>
-<script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    </script>
+    <script src="/js/app.min.js?rev=@@hash"></script>
+    
+    <script src="/js/main.min.js?rev=@@hash"></script>             
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
