fix the login process problems

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css?rev=@@hash">
-    <script type="text/javascript">xfxb = {login: false};</script>
+    <script type="text/javascript">xfxb = { login: {{isLogin}} };</script>
 </head>
 
 <body>
