--- a/public/src/sass/login.scss
+++ b/public/src/sass/login.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 10000;
-  background: $theme-bg-color url("http://adminex.themebucket.net/images/login-bg.jpg") no-repeat fixed;
+  background: #5FA3BA url("http://adminex.themebucket.net/images/login-bg.jpg") no-repeat fixed;
   // background: #38B18C;
   // background: $theme-bg-color;
   background-size: cover;
