--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
     </script>
     <script src="/js/app.min.js?rev=@@hash"></script>
     
-    <script src="/js/main.min.js?rev=@@hash"></script>             
+    <!-- <script src="/js/main.min.js?rev=@@hash"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
