--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2748,18 +2748,21 @@ button.close {
   text-decoration: none; }
 
 .theme-color {
-  color: #65cea7; }
+  color: #fcdfb3; }
 
 .menu-list-active, .left-side .menu-list a:hover, .left-side .menu-list a:active, .left-side .menu-list a:focus, .left-side .menu-list.active > a {
-  color: #65cea7;
-  background-color: #353f4f; }
+  background-color: #F5E6CE; }
 
 .submenu-list-active, .left-side .sub-menu-list li a:hover, .left-side .sub-menu-list li a:active, .left-side .sub-menu-list li a:focus, .left-side .sub-menu-list li a.active, .left-side .sub-menu-list li.active a {
-  color: #65cea7;
-  background-color: #2A323F; }
+  background-color: #E2CAA5; }
+
+.text-overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
 
 body {
-  background: #424f63;
+  background: #fff;
   font-family: 'sans-serif';
   overflow: hidden;
   -webkit-perspective: 1000;
@@ -2768,11 +2771,11 @@ body {
     overflow: auto; }
 
 a:hover {
-  color: #65cea7; }
+  color: #fcdfb3; }
 
 .main-content {
-  margin-left: 240px;
-  background: #eff0f4;
+  margin-left: 220px;
+  background: #fef8ee;
   min-height: 1000px; }
 
 .login-hide .main-content {
@@ -2780,42 +2783,43 @@ a:hover {
 
 .left-side {
   position: fixed;
-  width: 240px;
+  width: 220px;
   height: 100%;
-  background-color: #424f63;
   overflow-y: auto;
+  border-right: 2px solid #fcdfb3;
   z-index: 100; }
   .left-side .logo {
-    padding-top: 5px;
-    height: 50px; }
+    padding: 10px 0 6px; }
     .left-side .logo a {
-      font-size: 28px;
-      color: #fff;
-      margin: 0 0 0 20px;
-      display: inline-block; }
+      display: block; }
+      .left-side .logo a img {
+        display: inline-block;
+        width: 150px; }
   .left-side .logo-icon {
     display: none; }
   .left-side .nav {
     margin: 0; }
   .left-side .menu-list:hover {
-    color: #65cea7; }
+    color: #fcdfb3; }
   .left-side .menu-list a {
-    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    color: #4A4947;
     display: block;
     padding: 8px 15px;
-    font-size: 13px;
     line-height: 20px;
     padding-left: 16px;
     transition: background-color 0.2s ease-out 0s, color 0.2s ease-out 0s; }
   .left-side .menu-list > a {
     padding: 12px 20px;
-    font-size: 16px; }
+    text-indent: 30px; }
     .left-side .menu-list > a:after {
-      font-size: 14px;
-      font-weight: bold;
       content: '+';
-      color: inherit;
-      float: right; }
+      color: #4A4947;
+      float: right;
+      margin-right: 10px; }
+  .left-side .menu-list a.short-menu {
+    display: none; }
   .left-side .menu-list i {
     font-size: 15px;
     margin-right: 10px;
@@ -2829,37 +2833,47 @@ a:hover {
     display: none;
     margin: 0;
     padding: 0;
-    background: #353f4f; }
+    background: #F5E6CE; }
     .left-side .sub-menu-list.active {
       display: block; }
     .left-side .sub-menu-list li a {
-      color: #fff;
-      font-size: 13px;
+      font-size: 16px;
+      font-weight: normal;
       padding: 10px 5px 10px 50px;
-      transition: all 0.2s ease-out 0s; }
+      transition: all 0.1s ease-out 0s; }
+    .left-side .sub-menu-list li.active a {
+      color: #9C6B6B; }
   .left-side .active .sub-menu-list {
     display: block; }
 
 .left-side-collapsed .left-side {
   width: 52px;
-  top: 52px;
-  overflow: visible !important; }
+  overflow: visible !important;
+  background: #E2CAA5;
+  border: none; }
   .left-side-collapsed .left-side .logo {
     display: none; }
   .left-side-collapsed .left-side .logo-icon {
-    height: 45px;
-    margin-top: -48px;
+    height: 49px;
     display: block !important; }
+    .left-side-collapsed .left-side .logo-icon a, .left-side-collapsed .left-side .logo-icon img {
+      display: inline-block;
+      width: 100%; }
   .left-side-collapsed .left-side nav {
     margin: 2px 0 20px 0; }
     .left-side-collapsed .left-side nav li.menu-list a {
       text-align: left;
       padding: 6px 10px;
-      padding-left: 10px; }
+      padding-left: 10px;
+      color: #fff;
+      font-size: 14px;
+      text-indent: 5px; }
     .left-side-collapsed .left-side nav li.menu-list > a {
+      position: relative;
+      font-size: 15px;
       text-align: center;
-      padding: 10px;
-      position: relative; }
+      text-indent: 0;
+      padding: 0; }
       .left-side-collapsed .left-side nav li.menu-list > a:after {
         display: none; }
       .left-side-collapsed .left-side nav li.menu-list > a span:after {
@@ -2872,25 +2886,27 @@ a:hover {
         position: absolute;
         pointer-events: none;
         border-color: transparent;
-        border-right-color: #65cea7;
+        border-right-color: #E2CAA5;
         border-width: 6px;
         margin-top: -6px; }
+    .left-side-collapsed .left-side nav li.menu-list .short-menu {
+      display: block;
+      padding: 10px 0; }
     .left-side-collapsed .left-side nav li.menu-list .sub-menu-list {
       display: none; }
     .left-side-collapsed .left-side nav li.menu-list.on-hover > a {
-      background-color: #fff;
-      color: #424f63; }
+      background-color: #F5E6CE;
+      color: #4A4947; }
     .left-side-collapsed .left-side nav li.menu-list.on-hover a span {
-      display: block;
-      color: #fff; }
+      display: block; }
     .left-side-collapsed .left-side nav li.menu-list.on-hover .sub-menu-list {
       display: block;
       position: absolute;
       top: 40px;
       left: 53px;
       margin: 0;
-      min-width: 172px;
-      background: #353f4f;
+      min-width: 140px;
+      background: #F5E6CE;
       z-index: 100;
       border-radius: 0 0 2px 0;
       overflow-y: auto; }
@@ -2898,14 +2914,16 @@ a:hover {
       margin-right: 0; }
     .left-side-collapsed .left-side nav li.menu-list span {
       position: absolute;
-      background: #65CEA7;
+      background: #E2CAA5;
       padding: 10px;
       left: 52px;
       top: 0;
-      min-width: 173px;
+      min-width: 141px;
       text-align: left;
       z-index: 100;
       display: none; }
+    .left-side-collapsed .left-side nav .menu-list.active a {
+      color: #4A4947; }
 
 .left-side-collapsed .main-content {
   margin-left: 52px; }
@@ -2923,7 +2941,7 @@ a:hover {
   width: 100%;
   height: 100%;
   z-index: 10000;
-  background: #424f63 url("http://adminex.themebucket.net/images/login-bg.jpg") no-repeat fixed;
+  background: #5FA3BA url("http://adminex.themebucket.net/images/login-bg.jpg") no-repeat fixed;
   background-size: cover;
   transition: all 1s; }
 
@@ -3042,7 +3060,7 @@ a:hover {
 .sticky-header .header-section {
   position: fixed;
   top: 0;
-  left: 240px;
+  left: 220px;
   width: 100%;
   z-index: 100; }
 
@@ -3067,12 +3085,12 @@ a:hover {
   cursor: pointer;
   float: left;
   color: #212121;
-  border-right: 1px solid #e7e7e7;
+  border-right: 1px solid #F5E6CE;
   transition: all 0.2s ease-out 0s; }
   .toggle-btn:hover {
-    background: #65cea7;
+    background: #fcdfb3;
     color: #fff;
-    border-right-color: #65cea7; }
+    border-right-color: #fcdfb3; }
 
 .notification-menu {
   list-style: none; }
@@ -3113,10 +3131,10 @@ a:hover {
       background: none;
       padding: 15px; }
   .notification-menu .dropdown-menu-usermenu {
-    background: #65cea7;
+    background: #fcdfb3;
     min-width: 200px; }
     .notification-menu .dropdown-menu-usermenu:after {
-      border-bottom: 6px solid #65cea7;
+      border-bottom: 6px solid #fcdfb3;
       border-left: 6px solid transparent;
       border-right: 6px solid transparent;
       content: "";
@@ -3143,8 +3161,8 @@ a:hover {
   display: block; }
 
 .notification-menu .dropdown-toggle:hover, .notification-menu .dropdown-toggle:focus, .notification-menu .dropdown-toggle:active, .notification-menu .dropdown-toggle.active, .notification-menu .open .dropdown-toggle.dropdown-toggle {
-  background: #424f63;
-  color: #65cea7;
+  background: #fef8ee;
+  color: #fcdfb3;
   box-shadow: none; }
 
 .sticky-header .main-content {
