--- a/public/src/sass/style.sass
+++ b/public/src/sass/style.sass
@@ -16,8 +16,8 @@ html,body,body>section
 //     opacity: 1
 .main-content
   @extend .h100
-  margin-left: 240px
-  background: #eff0f4
+  margin-left: $left-side-w
+  background: $theme-bg-color
   min-height: 1000px
 .login-hide
   .main-content
