--- a/public/src/sass/_variables.sass
+++ b/public/src/sass/_variables.sass
@@ -4,6 +4,8 @@ $theme-bg-color: lighten($theme-color, 12)
 $theme-light-color: #F5E6CE
 $theme-dark-color: #E2CAA5
 
+$theme-font-color: #D8A85F
+
 $nav-active-font-color: #9C6B6B
 
 $left-side-w: 220px
@@ -12,3 +14,6 @@ $nav-collapsed-w: 52px
 $sub-menu-min-w: 140px
 
 $theme-black: #4A4947
+
+$pagination-color: #D0C59E
+$btn-color: #D2C398
