--- a/public/src/sass/content.scss
+++ b/public/src/sass/content.scss
@@ -1,8 +1,8 @@
 .sticky-header{
-  .main-content {
+  .right-side {
     padding-top: 50px;
   }
 }
-.login-show, .login-show .main-content {
+.login-show, .login-show .right-side {
     overflow: hidden !important;
 }
