--- a/public/src/sass/nav.sass
+++ b/public/src/sass/nav.sass
@@ -164,7 +164,7 @@
       .menu-list.active
         a
           color: $theme-black
-  .main-content
+  .right-side
     margin-left: $nav-collapsed-w
 
 .sticky-header.left-side-collapsed
