--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -116,4 +116,38 @@ hr.dotted
     color: #fff
     background-color: darken($btn-color, 5)
     border-color: darken($btn-color, 8)
+  &.btn-theme[disabled]:hover
+    background-color: $btn-color
+  &[data-submitting=true], &[data-submitting=true]:hover, &[data-submitting=true]:active, &[data-submitting=true]:focus
+    color: transparent
+  &[data-submitting=true]
+    position: relative
+    &:after
+      font-size: 12px
+      position: absolute
+      top: 50%
+      left: 50%
+      margin-left: -5px
+      margin-top: -9px
+      color: #fff
+      content: '\f01e'
+
+      font-family: FontAwesome
+      animation: fa-spin 2s infinite linear;  //依赖font-awesome
+
+.number-picker
+  @extend .tc
+  a
+    @extend .inline-block
+    padding: 6px
+    cursor: pointer
+  input
+    @extend .tc
+    width: 40px !important
+    padding-right: 3px
+    padding-left: 3px
+
+.table tbody tr.clickable
+  cursor: pointer
+  user-select: none
 
