--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -59,6 +59,8 @@ a
   text-align: left !important
 .nowrap
   white-space: nowrap
+.gray
+  color: #9C9A9A !important
 
 /**************************/
 /********* 组件类 **********/
@@ -77,6 +79,8 @@ a
     border-bottom: none
     color: $theme-font-color
     cursor: default
+.form-control.short-input
+  width: 85px
 
 .search-input
   position: relative
