--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,8 +23,8 @@
     <script>
     window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="http://localhost:3000/app.js"></script>
-    <script src="http://localhost:3000/webpack-dev-server.js"></script>
+    <script src="/js/app.min.js?rev=@@hash"></script>
+    
     <!-- <script src="/js/main.min.js?rev=@@hash"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/lib/bootstrap-datepicker.js"></script>
