--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3164,6 +3164,14 @@ button.close {
   border-color: #EFF2F7;
   cursor: not-allowed; }
 
+.pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus {
+  z-index: 3;
+  color: #fff;
+  background-color: #D0C59E;
+  border-color: #D0C59E;
+  cursor: default;
+  outline: 0; }
+
 /*button*/
 .btn-primary {
   background-color: #424F63;
