--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1486,27 +1486,49 @@ input[type="search"] {
   input[type="datetime-local"].form-control,
   input[type="month"].form-control {
     line-height: 34px; }
-  input[type="date"].input-sm,
+  input[type="date"].input-sm, .input-group-sm > input[type="date"].form-control,
+  .input-group-sm > input[type="date"].input-group-addon,
+  .input-group-sm > .input-group-btn > input[type="date"].btn,
   .input-group-sm input[type="date"],
   input[type="time"].input-sm,
+  .input-group-sm > input[type="time"].form-control,
+  .input-group-sm > input[type="time"].input-group-addon,
+  .input-group-sm > .input-group-btn > input[type="time"].btn,
   .input-group-sm
   input[type="time"],
   input[type="datetime-local"].input-sm,
+  .input-group-sm > input[type="datetime-local"].form-control,
+  .input-group-sm > input[type="datetime-local"].input-group-addon,
+  .input-group-sm > .input-group-btn > input[type="datetime-local"].btn,
   .input-group-sm
   input[type="datetime-local"],
   input[type="month"].input-sm,
+  .input-group-sm > input[type="month"].form-control,
+  .input-group-sm > input[type="month"].input-group-addon,
+  .input-group-sm > .input-group-btn > input[type="month"].btn,
   .input-group-sm
   input[type="month"] {
     line-height: 30px; }
-  input[type="date"].input-lg,
+  input[type="date"].input-lg, .input-group-lg > input[type="date"].form-control,
+  .input-group-lg > input[type="date"].input-group-addon,
+  .input-group-lg > .input-group-btn > input[type="date"].btn,
   .input-group-lg input[type="date"],
   input[type="time"].input-lg,
+  .input-group-lg > input[type="time"].form-control,
+  .input-group-lg > input[type="time"].input-group-addon,
+  .input-group-lg > .input-group-btn > input[type="time"].btn,
   .input-group-lg
   input[type="time"],
   input[type="datetime-local"].input-lg,
+  .input-group-lg > input[type="datetime-local"].form-control,
+  .input-group-lg > input[type="datetime-local"].input-group-addon,
+  .input-group-lg > .input-group-btn > input[type="datetime-local"].btn,
   .input-group-lg
   input[type="datetime-local"],
   input[type="month"].input-lg,
+  .input-group-lg > input[type="month"].form-control,
+  .input-group-lg > input[type="month"].input-group-addon,
+  .input-group-lg > .input-group-btn > input[type="month"].btn,
   .input-group-lg
   input[type="month"] {
     line-height: 46px; } }
@@ -1582,23 +1604,36 @@ fieldset[disabled]
   padding-bottom: 7px;
   margin-bottom: 0;
   min-height: 34px; }
-  .form-control-static.input-lg, .form-control-static.input-sm {
+  .form-control-static.input-lg, .input-group-lg > .form-control-static.form-control,
+  .input-group-lg > .form-control-static.input-group-addon,
+  .input-group-lg > .input-group-btn > .form-control-static.btn, .form-control-static.input-sm, .input-group-sm > .form-control-static.form-control,
+  .input-group-sm > .form-control-static.input-group-addon,
+  .input-group-sm > .input-group-btn > .form-control-static.btn {
     padding-left: 0;
     padding-right: 0; }
 
-.input-sm {
+.input-sm, .input-group-sm > .form-control,
+.input-group-sm > .input-group-addon,
+.input-group-sm > .input-group-btn > .btn {
   height: 30px;
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
   border-radius: 3px; }
 
-select.input-sm {
+select.input-sm, .input-group-sm > select.form-control,
+.input-group-sm > select.input-group-addon,
+.input-group-sm > .input-group-btn > select.btn {
   height: 30px;
   line-height: 30px; }
 
-textarea.input-sm,
-select[multiple].input-sm {
+textarea.input-sm, .input-group-sm > textarea.form-control,
+.input-group-sm > textarea.input-group-addon,
+.input-group-sm > .input-group-btn > textarea.btn,
+select[multiple].input-sm,
+.input-group-sm > select[multiple].form-control,
+.input-group-sm > select[multiple].input-group-addon,
+.input-group-sm > .input-group-btn > select[multiple].btn {
   height: auto; }
 
 .form-group-sm .form-control {
@@ -1623,19 +1658,28 @@ select[multiple].input-sm {
   font-size: 12px;
   line-height: 1.5; }
 
-.input-lg {
+.input-lg, .input-group-lg > .form-control,
+.input-group-lg > .input-group-addon,
+.input-group-lg > .input-group-btn > .btn {
   height: 46px;
   padding: 10px 16px;
   font-size: 18px;
   line-height: 1.33333;
   border-radius: 6px; }
 
-select.input-lg {
+select.input-lg, .input-group-lg > select.form-control,
+.input-group-lg > select.input-group-addon,
+.input-group-lg > .input-group-btn > select.btn {
   height: 46px;
   line-height: 46px; }
 
-textarea.input-lg,
-select[multiple].input-lg {
+textarea.input-lg, .input-group-lg > textarea.form-control,
+.input-group-lg > textarea.input-group-addon,
+.input-group-lg > .input-group-btn > textarea.btn,
+select[multiple].input-lg,
+.input-group-lg > select[multiple].form-control,
+.input-group-lg > select[multiple].input-group-addon,
+.input-group-lg > .input-group-btn > select[multiple].btn {
   height: auto; }
 
 .form-group-lg .form-control {
@@ -1677,14 +1721,18 @@ select[multiple].input-lg {
   text-align: center;
   pointer-events: none; }
 
-.input-lg + .form-control-feedback,
+.input-lg + .form-control-feedback, .input-group-lg > .form-control + .form-control-feedback,
+.input-group-lg > .input-group-addon + .form-control-feedback,
+.input-group-lg > .input-group-btn > .btn + .form-control-feedback,
 .input-group-lg + .form-control-feedback,
 .form-group-lg .form-control + .form-control-feedback {
   width: 46px;
   height: 46px;
   line-height: 46px; }
 
-.input-sm + .form-control-feedback,
+.input-sm + .form-control-feedback, .input-group-sm > .form-control + .form-control-feedback,
+.input-group-sm > .input-group-addon + .form-control-feedback,
+.input-group-sm > .input-group-btn > .btn + .form-control-feedback,
 .input-group-sm + .form-control-feedback,
 .form-group-sm .form-control + .form-control-feedback {
   width: 30px;
@@ -2331,6 +2379,108 @@ tbody.collapse.in {
   .navbar-right .dropdown-menu-left {
     left: 0;
     right: auto; } }
+
+.input-group {
+  position: relative;
+  display: table;
+  border-collapse: separate; }
+  .input-group[class*="col-"] {
+    float: none;
+    padding-left: 0;
+    padding-right: 0; }
+  .input-group .form-control {
+    position: relative;
+    z-index: 2;
+    float: left;
+    width: 100%;
+    margin-bottom: 0; }
+    .input-group .form-control:focus {
+      z-index: 3; }
+
+.input-group-addon,
+.input-group-btn,
+.input-group .form-control {
+  display: table-cell; }
+  .input-group-addon:not(:first-child):not(:last-child),
+  .input-group-btn:not(:first-child):not(:last-child),
+  .input-group .form-control:not(:first-child):not(:last-child) {
+    border-radius: 0; }
+
+.input-group-addon,
+.input-group-btn {
+  width: 1%;
+  white-space: nowrap;
+  vertical-align: middle; }
+
+.input-group-addon {
+  padding: 6px 12px;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1;
+  color: #555555;
+  text-align: center;
+  background-color: #eeeeee;
+  border: 1px solid #ccc;
+  border-radius: 4px; }
+  .input-group-addon.input-sm,
+  .input-group-sm > .input-group-addon,
+  .input-group-sm > .input-group-btn > .input-group-addon.btn {
+    padding: 5px 10px;
+    font-size: 12px;
+    border-radius: 3px; }
+  .input-group-addon.input-lg,
+  .input-group-lg > .input-group-addon,
+  .input-group-lg > .input-group-btn > .input-group-addon.btn {
+    padding: 10px 16px;
+    font-size: 18px;
+    border-radius: 6px; }
+  .input-group-addon input[type="radio"],
+  .input-group-addon input[type="checkbox"] {
+    margin-top: 0; }
+
+.input-group .form-control:first-child,
+.input-group-addon:first-child,
+.input-group-btn:first-child > .btn,
+.input-group-btn:first-child > .btn-group > .btn,
+.input-group-btn:first-child > .dropdown-toggle,
+.input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle),
+.input-group-btn:last-child > .btn-group:not(:last-child) > .btn {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0; }
+
+.input-group-addon:first-child {
+  border-right: 0; }
+
+.input-group .form-control:last-child,
+.input-group-addon:last-child,
+.input-group-btn:last-child > .btn,
+.input-group-btn:last-child > .btn-group > .btn,
+.input-group-btn:last-child > .dropdown-toggle,
+.input-group-btn:first-child > .btn:not(:first-child),
+.input-group-btn:first-child > .btn-group:not(:first-child) > .btn {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0; }
+
+.input-group-addon:last-child {
+  border-left: 0; }
+
+.input-group-btn {
+  position: relative;
+  font-size: 0;
+  white-space: nowrap; }
+  .input-group-btn > .btn {
+    position: relative; }
+    .input-group-btn > .btn + .btn {
+      margin-left: -1px; }
+    .input-group-btn > .btn:hover, .input-group-btn > .btn:focus, .input-group-btn > .btn:active {
+      z-index: 2; }
+  .input-group-btn:first-child > .btn,
+  .input-group-btn:first-child > .btn-group {
+    margin-right: -1px; }
+  .input-group-btn:last-child > .btn,
+  .input-group-btn:last-child > .btn-group {
+    z-index: 2;
+    margin-left: -1px; }
 
 .nav {
   margin-bottom: 0;
@@ -3094,9 +3244,6 @@ button.close {
   box-shadow: none; }
 
 /*dropdown select bg*/
-.dropdown-menu {
-  box-shadow: none; }
-
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
   background-color: #424F63;
   color: #FFFFFF;
@@ -3182,6 +3329,9 @@ button.close {
   background-color: #374152;
   border-color: #2e3644;
   color: #FFFFFF; }
+
+button, .btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.active:focus, .btn.active.focus {
+  outline: none; }
 
 /*modal*/
 .modal-dialog {
@@ -3278,10 +3428,29 @@ button.close {
 .table > tbody + tbody {
   border-top: none; }
 
+.input-xs, .input-group-xs > .form-control, .input-group-xs > .input-group-addon, .input-group-xs > .input-group-btn > .btn {
+  height: 27px;
+  padding: 5px;
+  line-height: initial; }
+
+.input-group-addon {
+  font-size: 12px; }
+
+select.input-xs, .input-group-xs > select.form-control, .input-group-xs > select.input-group-addon, .input-group-xs > .input-group-btn > select.btn {
+  height: 27px;
+  line-height: 27px; }
+
+.btn-xs {
+  padding: 4px 6px;
+  line-height: inherit; }
+
+.form-control {
+  font-size: 12px; }
+
 .h100, html, body, body > section, #app-container, .right-side {
   height: 100%; }
 
-.no-text-deco, .submenu-list-active, .left-side .sub-menu-list li a:hover, .left-side .sub-menu-list li a:active, .left-side .sub-menu-list li a:focus, .left-side .sub-menu-list li a.active, .left-side .sub-menu-list li.active a, a, a:hover {
+.no-text-deco, .submenu-list-active, .left-side .sub-menu-list li a:hover, .left-side .sub-menu-list li a:active, .left-side .sub-menu-list li a:focus, .left-side .sub-menu-list li a.active, .left-side .sub-menu-list li.active a, a, a:hover, a:focus {
   text-decoration: none; }
 
 .theme-color {
@@ -3301,7 +3470,7 @@ button.close {
 .inline-block, .number-picker a, .order-manage .address-all, .order-manage .bordered {
   display: inline-block; }
 
-.tc, .number-picker, .number-picker input {
+.tc, .number-picker, .number-picker input, .time-input {
   text-align: center; }
 
 /**************************/
@@ -3309,7 +3478,9 @@ button.close {
 /**************************/
 body {
   background: #fff;
-  font-family: 'sans-serif';
+  font-family: "open sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 13px;
+  color: #676a6c;
   overflow: hidden;
   -webkit-perspective: 1000;
           perspective: 1000; }
@@ -3332,15 +3503,30 @@ body {
 a:hover {
   color: #D8A85F; }
 
+a:focus {
+  outline: none; }
+
 /**************************/
 /********* 修饰类 **********/
 /**************************/
 .inline-block, .number-picker a, .order-manage .address-all, .order-manage .bordered {
   display: inline-block !important; }
 
+.mg-15 {
+  margin-bottom: 15px; }
+
 .space {
   margin-left: 6px;
   margin-right: 6px; }
+
+.space-right {
+  margin-right: 6px; }
+
+.space-left {
+  margin-left: 6px; }
+
+.pl-20 {
+  padding-left: 20px; }
 
 .round {
   border-radius: 5px; }
@@ -3361,6 +3547,12 @@ a:hover {
 
 .gray {
   color: #9C9A9A !important; }
+
+.font-sm {
+  font-size: 12px !important; }
+
+.font-lg {
+  font-size: 15px !important; }
 
 /**************************/
 /********* 组件类 **********/
@@ -3383,6 +3575,9 @@ a:hover {
 .form-control.short-input {
   width: 85px; }
 
+.form-control.long-input {
+  width: 200px; }
+
 .search-input {
   position: relative; }
   .search-input.form-inline {
@@ -3391,7 +3586,9 @@ a:hover {
     padding-right: 20px; }
     .search-input input:focus + i {
       color: #666; }
-    .search-input input.input-sm + i {
+    .search-input input.input-sm + i, .search-input .input-group-sm > input.form-control + i, .search-input
+    .input-group-sm > input.input-group-addon + i, .search-input
+    .input-group-sm > .input-group-btn > input.btn + i {
       top: 8px; }
   .search-input .fa {
     color: #cfcfce;
@@ -3418,10 +3615,13 @@ hr.dotted {
   background-color: #D2C398;
   border-color: #D2C398; }
 
-.btn.btn-theme:hover, .btn.btn-theme:focus, .btn.btn-theme:active.focus, .btn.btn-theme.active:hover, .btn.btn-theme.active:focus, .btn.btn-theme.active.focus, .open > .btn.btn-theme.dropdown-toggle:hover, .open > .btn.btn-theme.dropdown-toggle:focus, .open > .btn.btn-theme.dropdown-toggle.focus {
-  color: #fff;
-  background-color: #cab986;
-  border-color: #c6b27c; }
+.btn.btn-theme:hover, .btn.btn-theme:focus, .btn.btn-theme.active:focus, .btn.btn-theme.active:hover, .btn.btn-theme.active.focus, .open > .btn.btn-theme.dropdown-toggle:hover, .open > .btn.btn-theme.dropdown-toggle:focus, .open > .btn.btn-theme.dropdown-toggle.focus {
+  background-color: #c6b27c;
+  border-color: #bfaa6d; }
+
+.btn.btn-theme:active {
+  background-color: #bba463;
+  border-color: #b39a51; }
 
 .btn.btn-theme[disabled]:hover {
   background-color: #D2C398; }
@@ -3459,6 +3659,11 @@ hr.dotted {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none; }
+
+.time-input {
+  width: 30px !important;
+  padding-left: 2px;
+  padding-right: 2px; }
 
 .left-side {
   position: fixed;
@@ -3544,7 +3749,7 @@ hr.dotted {
       text-align: left;
       padding: 6px 10px;
       padding-left: 10px;
-      color: #fff;
+      color: #4A4947;
       font-size: 14px;
       text-indent: 5px; }
     .left-side-collapsed .left-side nav li.menu-list > a {
@@ -3552,6 +3757,7 @@ hr.dotted {
       font-size: 15px;
       text-align: center;
       text-indent: 0;
+      color: #fff;
       padding: 0; }
       .left-side-collapsed .left-side nav li.menu-list > a:after {
         display: none; }
@@ -3565,7 +3771,7 @@ hr.dotted {
         position: absolute;
         pointer-events: none;
         border-color: transparent;
-        border-right-color: #E2CAA5;
+        border-right-color: #d8b886;
         border-width: 6px;
         margin-top: -6px; }
     .left-side-collapsed .left-side nav li.menu-list .short-menu {
@@ -3593,7 +3799,7 @@ hr.dotted {
       margin-right: 0; }
     .left-side-collapsed .left-side nav li.menu-list span {
       position: absolute;
-      background: #E2CAA5;
+      background: #d8b886;
       padding: 10px;
       left: 52px;
       top: 0;
