--- a/public/src/sass/nav.sass
+++ b/public/src/sass/nav.sass
@@ -102,7 +102,7 @@
           text-align: left
           padding: 6px 10px
           padding-left: 10px
-          color: #fff
+          color: $theme-black
           font-size: 14px
           text-indent: 5px
         >a
@@ -110,6 +110,7 @@
           font-size: 15px
           text-align: center
           text-indent: 0
+          color: #fff
           padding: 0
           &:after
             display: none
@@ -124,7 +125,7 @@
               position: absolute
               pointer-events: none
               border-color: rgba(0, 0, 0, 0)
-              border-right-color: $theme-dark-color
+              border-right-color: darken($theme-dark-color, 8)
               border-width: 6px
               margin-top: -6px
         .short-menu
@@ -153,7 +154,7 @@
           margin-right: 0
         span
           position: absolute
-          background: $theme-dark-color
+          background: darken($theme-dark-color, 8)
           padding: 10px
           left: 52px
           top: 0
