--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -71,7 +71,7 @@
 /*pagination*/
 .pagination {
     font-size: 12px;
-    margin-right: 20px;
+    // margin-right: 20px;
     margin-top: 0;
 }
 .pagination > li > a, .pagination > li > span {
