--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,22 +8,20 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/datepicker.min.css">
-    <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.min.css?rev=@@hash">
+    <link href="/plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.min.css?rev=f656114cb3c7cd48aad3f20ba570a235">
     <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "/", };</script>
-    <!-- <script type="text/javascript">xfxb = { login: false, root: "/", };</script> -->
 </head>
 
 <body>
     <section id="app"></section>
     <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-    <script src="//js/app.min.js?rev=@@hash"></script>
+    <script src="/js/app.min.js?rev=e65a910a31135a6176f22eebb490964f"></script>
     
-    <!-- <script src="/js/main.min.js?rev=@@hash"></script>              -->
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
+    <script src="/lib/bootstrap.min.js"></script>
     <script src="/lib/bootstrap-datepicker.min.js"></script>
 </body>
 
