--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -251,3 +251,20 @@ hr.dotted
       //width: 20px
       height: 16px
       color: #ECA2A2
+
+.modal.loading
+  .modal-body
+    .loading-wrap
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0
+      left: 0
+      z-index: 10
+      background: rgba(253, 253, 253, 0.88)
+      i
+        position: absolute
+        top: 50%
+        margin-top: -10px
+        color: $theme-font-color
+
